[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1"]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 40
custom_constants/margin_top = 40
custom_constants/margin_right = 40
custom_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="Margin"]
custom_constants/separation = 16

[node name="Title" type="Label" parent="Margin/VBox"]
text = "Settings"
label_settings/font_size = 40

[node name="Scroll" type="ScrollContainer" parent="Margin/VBox"]
size_flags_vertical = 3

[node name="Options" type="VBoxContainer" parent="Margin/VBox/Scroll"]
custom_constants/separation = 14

[node name="InputSectionLabel" type="Label" parent="Margin/VBox/Scroll/Options"]
text = "Key Bindings"
label_settings/font_size = 28

[node name="LaneKeys" type="VBoxContainer" parent="Margin/VBox/Scroll/Options"]
custom_constants/separation = 6

[node name="GameplaySectionLabel" type="Label" parent="Margin/VBox/Scroll/Options"]
text = "Gameplay"
label_settings/font_size = 28

[node name="NoteSpeedHBox" type="HBoxContainer" parent="Margin/VBox/Scroll/Options"]
custom_constants/separation = 8

[node name="NoteSpeedLabel" type="Label" parent="Margin/VBox/Scroll/Options/NoteSpeedHBox"]
text = "Note Speed"

[node name="NoteSpeedSlider" type="HSlider" parent="Margin/VBox/Scroll/Options/NoteSpeedHBox"]
min_value = 5.0
max_value = 60.0
step = 1.0
size_flags_horizontal = 3

[node name="NoteSpeedValue" type="Label" parent="Margin/VBox/Scroll/Options/NoteSpeedHBox"]
text = "20"

[node name="TimingOffsetHBox" type="HBoxContainer" parent="Margin/VBox/Scroll/Options"]
custom_constants/separation = 8

[node name="TimingOffsetLabel" type="Label" parent="Margin/VBox/Scroll/Options/TimingOffsetHBox"]
text = "Timing Offset (ms)"

[node name="TimingOffsetSpin" type="SpinBox" parent="Margin/VBox/Scroll/Options/TimingOffsetHBox"]
min_value = -200
max_value = 200
step = 1
value = 0

[node name="AudioSectionLabel" type="Label" parent="Margin/VBox/Scroll/Options"]
text = "Audio"
label_settings/font_size = 28

[node name="MasterVolHBox" type="HBoxContainer" parent="Margin/VBox/Scroll/Options"]
custom_constants/separation = 8

[node name="MasterLabel" type="Label" parent="Margin/VBox/Scroll/Options/MasterVolHBox"]
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Margin/VBox/Scroll/Options/MasterVolHBox"]
min_value = 0.0
max_value = 1.0
step = 0.01
size_flags_horizontal = 3

[node name="MasterValue" type="Label" parent="Margin/VBox/Scroll/Options/MasterVolHBox"]
text = "100%"

[node name="ButtonsHBox" type="HBoxContainer" parent="Margin/VBox"]
custom_constants/separation = 16

[node name="SaveButton" type="Button" parent="Margin/VBox/ButtonsHBox"]
text = "Save"

[node name="ResetButton" type="Button" parent="Margin/VBox/ButtonsHBox"]
text = "Reset"

[node name="BackButton" type="Button" parent="Margin/VBox"]
text = "Back"
